--- a/package.json
+++ b/package.json
@@ -1,24 +1,57 @@
 {
-  "name": "rx-crossfilter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "serve": "npx webpack-dev-server"
-  },
   "author": "",
-  "license": "ISC",
+  "bundleDependencies": false,
+  "deprecated": false,
+  "description": "",
   "dependencies": {
     "crossfilter2": "^1.4.6",
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.2.2",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "@types/chart.js": "^2.7.42",
-    "chart.js": "^2.7.3",
-    "webpack": "^4.28.1"
-  }
+    "@types/jasmine": "^2.5.53",
+    "awesome-typescript-loader": "^5.2.0",
+    "cross-env": "^5.0.1",
+    "css-loader": "^1.0.0",
+    "ejs-loader": "^0.3.0",
+    "eslint": "^5.4.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine": "^3.2.0",
+    "jasmine-core": "^3.2.1",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.0",
+    "rimraf": "^2.6.1",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.22.1",
+    "tslint": "^5.5.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^3.0.1",
+    "webpack": "^4.17.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "license": "ISC",
+  "main": "src/index.ts",
+  "name": "rx-crossfilter",
+  "scripts": {
+    "build": "npm run build:prod",
+    "build:dev": "webpack --mode development --config ./webpack.config.js --progress --color --display-error-details",
+    "build:prod": "cross-env NODE_ENV=production webpack --mode production --config ./webpack.config.js  --progress  --color --display-error-details --bail",
+    "clean": "npm cache clear && rimraf -- dist",
+    "server": "npm run server:dev",
+    "server:dev": "webpack-dev-server --mode development --config ./webpack.config.js --hot --inline --progress --watch --open",
+    "server:prod": "cross-env NODE_ENV=production webpack-dev-server  --mode production --config ./webpack.config.js --port 3000 --host 0.0.0.0 --hot --inline --progress  --watch --open --content-base dist/",
+    "start": "npm run server:dev",
+    "test": "karma start"
+  },
+  "version": "0.0.1"
 }
