--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "server:dev": "webpack-dev-server --mode development --config ./webpack.config.js --hot --inline --progress --watch --open",
     "server:prod": "cross-env NODE_ENV=production webpack-dev-server  --mode production --config ./webpack.config.js --port 3000 --host 0.0.0.0 --hot --inline --progress  --watch --open --content-base dist/",
     "start": "npm run server:dev",
-    "test": "npx mocha --require ts-node/register src/**/*.spec.ts"
+    "test": "npx mocha --require ts-node/register src/**/*.spec.ts",
+    "test:watch": "npx mocha --require ts-node/register --watch-extensions ts --watch \"src/**/*.spec.ts\""
   },
   "version": "0.0.1"
 }
